[gd_scene load_steps=3 format=2]

[ext_resource path="res://settings_page/settings_page.gd" type="Script" id=1]
[ext_resource path="res://menu.theme" type="Theme" id=2]

[node name="SettingsPage" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="TabContainer" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0

[node name="Audio" type="Tabs" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 30.0
margin_right = -6.0
margin_bottom = -6.0

[node name="GridContainer" type="GridContainer" parent="TabContainer/Audio"]
anchor_left = 0.158228
anchor_top = 0.0802138
anchor_right = 0.841772
anchor_bottom = 0.919786
custom_constants/vseparation = 20
custom_constants/hseparation = 50
columns = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="TabContainer/Audio/GridContainer"]
margin_top = 1.0
margin_right = 85.0
margin_bottom = 15.0
text = "Master"
align = 2
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Audio/GridContainer"]
margin_left = 135.0
margin_right = 664.0
margin_bottom = 16.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="TabContainer/Audio/GridContainer/HBoxContainer"]
margin_top = 1.0
margin_right = 8.0
margin_bottom = 15.0
text = "0"

[node name="SliderAudioMaster" type="HSlider" parent="TabContainer/Audio/GridContainer/HBoxContainer"]
margin_left = 12.0
margin_right = 501.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.01
tick_count = 5
ticks_on_borders = true

[node name="Label2" type="Label" parent="TabContainer/Audio/GridContainer/HBoxContainer"]
margin_left = 505.0
margin_top = 1.0
margin_right = 529.0
margin_bottom = 15.0
text = "100"

[node name="Label2" type="Label" parent="TabContainer/Audio/GridContainer"]
margin_top = 37.0
margin_right = 85.0
margin_bottom = 51.0
text = "Sound Effects"
align = 2
valign = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="TabContainer/Audio/GridContainer"]
margin_left = 135.0
margin_top = 36.0
margin_right = 664.0
margin_bottom = 52.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="TabContainer/Audio/GridContainer/HBoxContainer2"]
margin_top = 1.0
margin_right = 8.0
margin_bottom = 15.0
text = "0"

[node name="SliderAudioSFX" type="HSlider" parent="TabContainer/Audio/GridContainer/HBoxContainer2"]
margin_left = 12.0
margin_right = 501.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.01
tick_count = 5
ticks_on_borders = true

[node name="Label2" type="Label" parent="TabContainer/Audio/GridContainer/HBoxContainer2"]
margin_left = 505.0
margin_top = 1.0
margin_right = 529.0
margin_bottom = 15.0
text = "100"

[node name="Label3" type="Label" parent="TabContainer/Audio/GridContainer"]
margin_top = 73.0
margin_right = 85.0
margin_bottom = 87.0
text = "Music"
align = 2
valign = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="TabContainer/Audio/GridContainer"]
margin_left = 135.0
margin_top = 72.0
margin_right = 664.0
margin_bottom = 88.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="TabContainer/Audio/GridContainer/HBoxContainer3"]
margin_top = 1.0
margin_right = 8.0
margin_bottom = 15.0
text = "0"

[node name="SliderAudioMusic" type="HSlider" parent="TabContainer/Audio/GridContainer/HBoxContainer3"]
margin_left = 12.0
margin_right = 501.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.01
tick_count = 5
ticks_on_borders = true

[node name="Label2" type="Label" parent="TabContainer/Audio/GridContainer/HBoxContainer3"]
margin_left = 505.0
margin_top = 1.0
margin_right = 529.0
margin_bottom = 15.0
text = "100"

[node name="BtnBack" type="Button" parent="TabContainer/Audio"]
anchor_top = 0.0093985
anchor_right = 0.052734
anchor_bottom = 0.058333
text = "Back"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Video" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 47.0
margin_right = -6.0
margin_bottom = -6.0

[node name="GridContainer" type="GridContainer" parent="TabContainer/Video"]
anchor_left = 0.158228
anchor_top = 0.0802138
anchor_right = 0.841772
anchor_bottom = 0.919786
custom_constants/vseparation = 20
custom_constants/hseparation = 50
columns = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="LeftColumn" type="VBoxContainer" parent="TabContainer/Video/GridContainer"]
margin_left = 139.0
margin_right = 307.0
margin_bottom = 425.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 10
size_flags_vertical = 7

[node name="BorderlessCheckButton" type="CheckButton" parent="TabContainer/Video/GridContainer/LeftColumn"]
margin_right = 168.0
margin_bottom = 32.0
text = "Borderless"
align = 2

[node name="FullScreenCheckButton" type="CheckButton" parent="TabContainer/Video/GridContainer/LeftColumn"]
margin_top = 36.0
margin_right = 168.0
margin_bottom = 68.0
text = "FullScreen"
align = 2

[node name="VSyncCheckButton" type="CheckButton" parent="TabContainer/Video/GridContainer/LeftColumn"]
margin_top = 72.0
margin_right = 168.0
margin_bottom = 104.0
text = "VSync"
align = 2

[node name="RightColumn" type="VBoxContainer" parent="TabContainer/Video/GridContainer"]
margin_left = 357.0
margin_right = 357.0
margin_bottom = 425.0
size_flags_horizontal = 2
size_flags_vertical = 3

[node name="BtnBack" type="Button" parent="TabContainer/Video"]
anchor_top = 0.0093985
anchor_right = 0.052734
anchor_bottom = 0.058333
text = "Back"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Gameplay" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 47.0
margin_right = -6.0
margin_bottom = -6.0

[node name="GridContainer" type="GridContainer" parent="TabContainer/Gameplay"]
anchor_left = 0.158228
anchor_top = 0.0802138
anchor_right = 0.841772
anchor_bottom = 0.919786
custom_constants/vseparation = 20
custom_constants/hseparation = 50
columns = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="TabContainer/Gameplay/GridContainer"]
margin_right = 96.0
margin_bottom = 45.0
text = "Mouse 
Sensitivity"
align = 2
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Gameplay/GridContainer"]
margin_left = 146.0
margin_right = 664.0
margin_bottom = 45.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="TabContainer/Gameplay/GridContainer/HBoxContainer"]
margin_top = 12.0
margin_right = 13.0
margin_bottom = 33.0
text = "0"

[node name="SliderMouseSense" type="HSlider" parent="TabContainer/Gameplay/GridContainer/HBoxContainer"]
margin_left = 17.0
margin_top = 14.0
margin_right = 482.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 0.5
tick_count = 5
ticks_on_borders = true

[node name="Label2" type="Label" parent="TabContainer/Gameplay/GridContainer/HBoxContainer"]
margin_left = 486.0
margin_top = 12.0
margin_right = 518.0
margin_bottom = 33.0
text = "100"

[node name="Label2" type="Label" parent="TabContainer/Gameplay/GridContainer"]
margin_top = 65.0
margin_right = 96.0
margin_bottom = 110.0
text = "Gamepad 
Sensitivity"
align = 2
valign = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="TabContainer/Gameplay/GridContainer"]
margin_left = 146.0
margin_top = 65.0
margin_right = 664.0
margin_bottom = 110.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="TabContainer/Gameplay/GridContainer/HBoxContainer2"]
margin_top = 12.0
margin_right = 13.0
margin_bottom = 33.0
text = "0"

[node name="SliderPadSense" type="HSlider" parent="TabContainer/Gameplay/GridContainer/HBoxContainer2"]
margin_left = 17.0
margin_top = 14.0
margin_right = 482.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 0.5
tick_count = 5
ticks_on_borders = true

[node name="Label2" type="Label" parent="TabContainer/Gameplay/GridContainer/HBoxContainer2"]
margin_left = 486.0
margin_top = 12.0
margin_right = 518.0
margin_bottom = 33.0
text = "100"

[node name="BtnBack" type="Button" parent="TabContainer/Gameplay"]
anchor_top = 0.0093985
anchor_right = 0.052734
anchor_bottom = 0.058333
text = "Back"
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="pressed" from="TabContainer/Audio/BtnBack" to="." method="_on_btn_back_pressed"]
[connection signal="pressed" from="TabContainer/Video/BtnBack" to="." method="_on_btn_back_pressed"]
[connection signal="pressed" from="TabContainer/Gameplay/BtnBack" to="." method="_on_btn_back_pressed"]
